# botverse

./: flowers-data.txt  react-data.txt  test-data.txt
backend/: .env  =0.1.2  alembic.ini  botverse-design.txt  chroma.sqlite3  head.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6e12947ce221_add_unique_constraint_to_chatbot_name.py  ca984b8d6207_updated_chatbot_table.py
backend/chatbots/: routes.py
backend/chroma_langchain_db/: chroma.sqlite3
backend/chrroma-data/: chroma.sqlite3
backend/database/: db.py
backend/models/: model.py
backend/rag/: GeminiSetup.py  chromaSetup.py  pineconeSetup.py  user_file_handling.py
backend/rag/chroma-data/: chroma.sqlite3
backend/users/: routes.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  Layout.tsx  main.tsx
frontend/src/pages/: Chat.tsx  Home.tsx  Login.tsx  Navbar.tsx  Profile.tsx  Signup.tsx
